--- a/style.css
+++ b/style.css
@@ -660,20 +660,7 @@ iframe{
     padding:40px 60px;
 }
 
-
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-section #portfolio{
+#portfolio{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -683,7 +670,7 @@ section #portfolio{
     margin: 40px auto;
 }
 
-section #portfolio ul{
+ #portfolio ul{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -691,7 +678,7 @@ section #portfolio ul{
     margin-bottom: 20px;
 }
 
-section #portfolio ul li{
+ #portfolio ul li{
     list-style-type: none;
     background-color: #aaa;
     padding: 12px 20px;
@@ -700,7 +687,7 @@ section #portfolio ul li{
     cursor: pointer;
 }
 
-section #portfolio ul li.active{
+ #portfolio ul li.active{
     background-color: #333;
     color: #aaa;
 }
