--- a/style.css
+++ b/style.css
@@ -661,10 +661,11 @@ iframe{
 }
 
 #portfolio{
+        padding: 0% 20px;
+    background-color: rgba(34, 34, 34, 1);
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
     width: 100%;
     flex-direction: column;
     margin: 40px auto;
