--- a/style.css
+++ b/style.css
@@ -471,7 +471,7 @@ a.insta-btn:hover{
 }
 
 .resume-text-details{
-    padding: 30px;
+    padding: 30px 30px 30px 60px;
 }
 
 .resume-text-details-heading{
@@ -676,7 +676,7 @@ iframe{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
  #portfolio ul li{
@@ -722,9 +722,36 @@ iframe{
     object-fit: cover;
 }
 
+.portfolio-heading{
+    width: 100%;
+}
 
+.portfolio-heading h2 {
+        color: #f5f5f5;
+        font-size: 1.9rem;
+        font-weight: 600;
+        padding: 30px 30px 10px 30px;
+        position: relative;
+}
 
+.portfolio-heading h2::before{
+    position: absolute;
+    content: '';
+    bottom: 3px;
+    left: 25px;
+    border-bottom: 1px solid #aaa;
+    width: 95%;
+}
 
+.portfolio-heading p{
+display: block;
+color: #bbb;
+font-size: 1rem;
+font-weight: 300;
+text-align: right;
+padding-right: 40px;
+margin-bottom: 40px;
+}
 
 
 
@@ -1071,6 +1098,17 @@ iframe{
         width: 90%;
     }
     
+    .portfolio-heading p{
+        padding-right: 20px;
+    }
+
+    .portfolio-heading h2{
+        padding: 30px 30px 10px 0px;
+    }
+
+    .portfolio-heading h2::before {
+        left: 0;
+    }
     
 }
 
