--- a/style.css
+++ b/style.css
@@ -661,14 +661,13 @@ iframe{
 }
 
 #portfolio{
-    padding: 40px 20px;
+    padding: 20px;
     background-color: rgba(34, 34, 34, 1);
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     flex-direction: column;
-
 }
 
  #portfolio ul{
@@ -730,7 +729,7 @@ iframe{
         color: #f5f5f5;
         font-size: 1.9rem;
         font-weight: 600;
-        padding: 30px 30px 10px 30px;
+        padding: 10px 30px 10px 30px;
         position: relative;
 }
 
